# systemd

./: meson.build
src/libsystemd/: libsystemd.sym  meson.build
src/libsystemd-lldp/: libsystemd-lldp.pc.in  libsystemd-lldp.sym  meson.build
src/libsystemd-network/: meson.build
src/network/: meson.build
src/systemd/: meson.build
src/test/: meson.build
